# orgmode-daedalus

./: CHANGELOG.md  LICENSE  README.org  flake.nix  orgmode-daedalus.cabal
.github/workflows/: ci.yml
_eng_/: doc.eng  run.eng  subproj.eng
app/: Main.hs
ddl/: org_mode.ddl
src/: OrgMode.hs
src/Daedalus/: Diagnostic.hs
src/OrgMode/: Include.hs  Markup.hs  Parse.hs  Sayable.hs
src/OrgMode/Sayable/: Defs.hs  HTML.hs  Text.hs  TextStyle1.hs
test/: Main.hs  TestOrgMode.hs
test/expected/: README-html.exp  README-text.exp  README-textstyle1.exp  README.org  hello-html.exp  hellosections-html.exp  hellosections-textstyle1.exp  hellosections.exp  hellosections.org
